<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtnum1"/>

    <EditText
        android:id="@+id/activity_main_num1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/editnum1"
        android:inputType="number" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtnum2"/>
    <EditText
        android:id="@+id/activity_main_num2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/editnum2"
        android:inputType="number" />


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sumar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Sumar"
            android:text="@string/btnsumar" />

        <Button
            android:id="@+id/restar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Restar"
            android:text="@string/btnrestar" />

        <Button
            android:id="@+id/dividir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Dividir"
            android:text="@string/btndiv" />

        <Button
            android:id="@+id/multiplicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Multiplicar"
            android:text="@string/btnmult" />

    </LinearLayout>


    <EditText
        android:id="@+id/activity_main_resultado"
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/editresultado"
        android:inputType="number" />


</LinearLayout>

